mdadm (3.1.1-1) unstable; urgency=low

  * New upstream release.
  * Retire fixed/blkid-dev branch.
  * Reword warning about unbootable system when mdadm is purged
    (closes: #544558).
  * Updated FAQ to include s2ram as one of the reasons that can prevent an
    array from being stopped; thanks to Pascal Hambourg for writing in.
  * Install udev rules into udeb package (closes: #558823).

 -- martin f. krafft <madduck@debian.org>  Wed, 27 Jan 2010 10:14:25 +1300

mdadm (3.0.3-2) unstable; urgency=low

  * Bumped Standards-Version to 3.8.3 without having to make changes.
  * Fixed init dependencies of mdadm daemon init.d script; thanks Petter
    Reinholdtsen (closes: #541396).
  * Switched source package to v3-quilt format.

 -- martin f. krafft <madduck@debian.org>  Fri, 06 Nov 2009 10:06:03 +0100

mdadm (3.0.3-1) unstable; urgency=low

  * New upstream release.
  * Acknowledge 3.0-3.1 NMU by Christian Kujau (patch by Marco d'Itri)
    (closes: #541884), and add util-linux dependency.
  * Copy udev rules into initramfs, which udev stopped doing
    (closes: #549535, #549083, #538843, #538143).
  * Fix the bug script to write debug information to the correct file
    descriptor (closes: #537734).
  * Switch to TopGit and split Debian diff into topic branches; add
    README.source.
  * Drop the outdated rootraiddoc.97.html document.

 -- martin f. krafft <madduck@debian.org>  Tue, 27 Oct 2009 18:06:13 +0100

mdadm (3.0-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * use blkid instead of vold_id in udev-md-raid.rules (closes: #541884)

 -- christian kujau <lists@nerdbynature.de>  Mon, 14 Sep 2009 10:15:21 +0200

mdadm (3.0-2) unstable; urgency=low

  * Fixed initramfs script with patch from Steffen Hau: it was still using
    --auto-update-homehost, which has been removed and replaced by a better
     heuristic: arrays created for a different "homehost" will now be
     assembled read-only, rather than shoehorned into the system with