@@ -6,7 +6,7 @@
 
 #export DH_VERBOSE=1
 
-TG_BRANCHES="contrib/docs/raid5-vs-raid10 contrib/docs/superblock_formats contrib/docs/md.txt contrib/docs/jd-rebuilding-raid debian/conffile-location"
+TG_BRANCHES="contrib/scripts/mdadd contrib/docs/raid5-vs-raid10 contrib/docs/superblock_formats contrib/docs/md.txt contrib/docs/jd-rebuilding-raid debian/conffile-location"
 -include /usr/share/topgit/tg2quilt.mk
 
 CXFLAGS = -ggdb
@@ -94,7 +94,7 @@ binary-arch: build install
 	dh_lintian
 	dh_installdebconf
 	dh_installdocs
-	dh_installexamples debian/newdisk
+	dh_installexamples contrib/mdadd.sh
 	dh_installinit --init-script=mdadm-raid --no-start -- start 25 S . start 60 0 6 .
 	dh_installinit -- defaults 25
 	dh_installman
@@ -103,7 +103,7 @@ binary-arch: build install
 	dh_installlogcheck
 	dh_link
 	dh_strip
-	dh_compress
+	dh_compress -Xmdadd.sh
 	dh_fixperms
 	dh_installdeb
 	dh_shlibdeps
