@@ -7,6 +7,9 @@ mdadm (3.1.1-1) unstable; urgency=low
   * Updated FAQ to include s2ram as one of the reasons that can prevent an
     array from being stopped; thanks to Pascal Hambourg for writing in.
   * Install udev rules into udeb package (closes: #558823).
+  * Update mdadd.sh (formerly /usr/share/doc/mdadm/examples/newdisk.gz) from
+    Arno's website, refactoring the script into its own branch/patch
+    (closes: #539103).
 
  -- martin f. krafft <madduck@debian.org>  Wed, 27 Jan 2010 10:14:25 +1300
 
